dataset1235/2025-2/805158916/users/69248557/executions/1584167357_3198308593.log
== RUN (2025-08-27 14:26:43)
-- CODE: 
import math
raio = float(input("Insira um raio ")) 
volume = (4 * math.pi * raio ** 3)/3  
print(round(volume,4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.5
---- correct output:
696.91
---- user output:
Insira um raio 696.91
-- TEST CASE 2:
---- input:
1.0
---- correct output:
4.1888
---- user output:
Insira um raio 4.1888
-- TEST CASE 3:
---- input:
3.2
---- correct output:
137.2583
---- user output:
Insira um raio 137.2583
-- TEST CASE 4:
---- input:
10.0
---- correct output:
4188.7902
---- user output:
Insira um raio 4188.7902
-- TEST CASE 5:
---- input:
12.0
---- correct output:
7238.2295
---- user output:
Insira um raio 7238.2295
-- TEST CASE 6:
---- input:
0.5
---- correct output:
0.5236
---- user output:
Insira um raio 0.5236
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:26:07)
-- CODE: 
import math
raio = float(input("Insira um raio")) 
volume = (4 * 3 * math.pi * raio ** 3)/3  
print(round(volume,4)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.5
---- correct output:
696.91
-- ERROR:
File "XXXX", line 4
    print(round(volume,4)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
1.0
---- correct output:
4.1888
-- ERROR:
File "XXXX", line 4
    print(round(volume,4)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
3.2
---- correct output:
137.2583
-- ERROR:
File "XXXX", line 4
    print(round(volume,4)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
10.0
---- correct output:
4188.7902
-- ERROR:
File "XXXX", line 4
    print(round(volume,4)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
12.0
---- correct output:
7238.2295
-- ERROR:
File "XXXX", line 4
    print(round(volume,4)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
0.5
---- correct output:
0.5236
-- ERROR:
File "XXXX", line 4
    print(round(volume,4)
         ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:26:23)
-- CODE: 
import math
raio = float(input("Insira um raio ")) 
volume = (4 * 3 * math.pi * raio ** 3)/3  
print(round(volume,4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.5
---- correct output:
696.91
---- user output:
Insira um raio 2090.7299
-- TEST CASE 2:
---- input:
1.0
---- correct output:
4.1888
---- user output:
Insira um raio 12.5664
-- TEST CASE 3:
---- input:
3.2
---- correct output:
137.2583
---- user output:
Insira um raio 411.7748
-- TEST CASE 4:
---- input:
10.0
---- correct output:
4188.7902
---- user output:
Insira um raio 12566.3706
-- TEST CASE 5:
---- input:
12.0
---- correct output:
7238.2295
---- user output:
Insira um raio 21714.6884
-- TEST CASE 6:
---- input:
0.5
---- correct output:
0.5236
---- user output:
Insira um raio 1.5708
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:26:18)
-- CODE: 
import math
raio = float(input("Insira um raio")) 
volume = (4 * 3 * math.pi * raio ** 3)/3  
print(round(volume,4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.5
---- correct output:
696.91
---- user output:
Insira um raio2090.7299
-- TEST CASE 2:
---- input:
1.0
---- correct output:
4.1888
---- user output:
Insira um raio12.5664
-- TEST CASE 3:
---- input:
3.2
---- correct output:
137.2583
---- user output:
Insira um raio411.7748
-- TEST CASE 4:
---- input:
10.0
---- correct output:
4188.7902
---- user output:
Insira um raio12566.3706
-- TEST CASE 5:
---- input:
12.0
---- correct output:
7238.2295
---- user output:
Insira um raio21714.6884
-- TEST CASE 6:
---- input:
0.5
---- correct output:
0.5236
---- user output:
Insira um raio1.5708
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:26:48)
-- CODE: 
import math
raio = float(input("Insira um raio ")) 
volume = (4 * math.pi * raio ** 3)/3  
print(round(volume,4))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5.5
---- correct output:
696.91
---- user output:
Insira um raio 696.91
-- TEST CASE 2:
---- input:
1.0
---- correct output:
4.1888
---- user output:
Insira um raio 4.1888
-- TEST CASE 3:
---- input:
3.2
---- correct output:
137.2583
---- user output:
Insira um raio 137.2583
-- TEST CASE 4:
---- input:
10.0
---- correct output:
4188.7902
---- user output:
Insira um raio 4188.7902
-- TEST CASE 5:
---- input:
12.0
---- correct output:
7238.2295
---- user output:
Insira um raio 7238.2295
-- TEST CASE 6:
---- input:
0.5
---- correct output:
0.5236
---- user output:
Insira um raio 0.5236
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
